--- a/MediaPlayer-Backend/src/main/resources/application.yml
+++ b/MediaPlayer-Backend/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     username: root
     password: Teemo1234
-    url: jdbc:mysql://s1.imyx.top:3306/media_player?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
+    url: jdbc:mysql://go.imyx.top:3306/media_player?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
 #    password: 123456
 #    url: jdbc:mysql://localhost:3306/media_player?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
     hikari:
